Fix the hovering shading on menu
On hover in the submenu the shading of the button is not the same height as the rest of the menu, so it looks weird and unfinished.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -107,3 +107,7 @@ ul.nav.navbar-nav li a{
     width: auto;
     margin: 0 auto;
 }
+
+#page-menu nav li, #page-menu nav li a{
+    height: 100%;
+}
